tests/ui/generic-associated-types/issue-102335-gat.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-gat.rs:2:21
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                     ^^^^^^^^ associated type not allowed here
   |
help: consider removing this type binding
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                   ~~~~~~~~~~

error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-gat.rs:2:21
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                     ^^^^^^^^ associated type not allowed here
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider removing this type binding
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                   ~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0229`.
